--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
