--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "relia-react",
   "version": "0.1.0",
-  "proxy": "http://localhost:6003",
+  "proxy": "http://127.0.0.1:6003",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
