--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^2.1.3",
+    "react-slugify": "^2.1.0",
+    "slugify": "^1.6.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
