--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "relia-react",
   "version": "0.1.0",
-  "proxy": "http://127.0.0.1:6003",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -9,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
+    "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
