--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.1",
     "react": "^18.2.0",
+    "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^2.1.3",
     "react-slugify": "^2.1.0",
