--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-native": "^0.71.4",
+    "react-native-web": "^0.18.12",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^2.1.3",
     "react-slugify": "^2.1.0",
