--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "i18next-http-backend": "^2.2.1",
     "jquery": "^3.6.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.1.2",
