Rename environments so they are all in an environments folder

--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "env-cmd": "^10.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "start:pluto:prod": "env-cmd -f .env.pluto.production react-scripts start",
-    "start:pluto:test": "env-cmd -f .env.pluto.test react-scripts start",
-    "start:redpitaya:prod": "env-cmd -f .env.redpitaya.production react-scripts start",
-    "start:redpitaya:test": "env-cmd -f .env.redpitaya.test react-scripts start",
-    "build:pluto:prod": "env-cmd -f .env.pluto.production react-scripts build",
-    "build:pluto:test": "env-cmd -f .env.pluto.test react-scripts build",
-    "build:redpitaya:prod": "env-cmd -f .env.redpitaya.production react-scripts build",
-    "build:redpitaya:test": "env-cmd -f .env.redpitaya.test react-scripts build",
-    "build": "react-scripts build",
+    "start": "env-cmd -f environments/devrc react-scripts start",
+    "start:pluto:prod": "env-cmd -f environments/pluto-prodrc react-scripts start",
+    "start:pluto:staging": "env-cmd -f environments/pluto-stagingrc react-scripts start",
+    "start:redpitaya:prod": "env-cmd -f environments/redpitaya-prodrc react-scripts start",
+    "start:redpitaya:staging": "env-cmd -f environments/redpitaya-stagingrc react-scripts start",
+    "build:pluto:prod": "env-cmd -f environments/pluto-prodrc react-scripts build",
+    "build:pluto:staging": "env-cmd -f environments/pluto-stagingrc react-scripts build",
+    "build:redpitaya:prod": "env-cmd -f environments/redpitaya-prodrc react-scripts build",
+    "build:redpitaya:staging": "env-cmd -f environments/redpitaya-stagingrc react-scripts build",
+    "build": "env-cmd -f environments/devrc react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "i18n:scan": "i18next-scanner"
