--- a/package.json
+++ b/package.json
@@ -21,12 +21,11 @@
     "react-icons": "^4.8.0",
     "react-native": "^0.71.4",
     "react-native-web": "^0.18.12",
-    "react-router-dom": "^6.4.2",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "^2.1.3",
     "react-slugify": "^2.1.0",
     "slugify": "^1.6.5",
-    "web-vitals": "^2.1.4",
-    "env-cmd": "^10.1.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "env-cmd -f environments/devrc react-scripts start",
