Remove the build-* name in packages

--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "start:pluto:staging": "env-cmd -f environments/pluto-stagingrc react-scripts start",
     "start:redpitaya:prod": "env-cmd -f environments/redpitaya-prodrc react-scripts start",
     "start:redpitaya:staging": "env-cmd -f environments/redpitaya-stagingrc react-scripts start",
-    "build:pluto:prod": "env-cmd -f environments/pluto-prodrc react-scripts build-pluto",
-    "build:pluto:staging": "env-cmd -f environments/pluto-stagingrc react-scripts build-pluto",
-    "build:redpitaya:prod": "env-cmd -f environments/redpitaya-prodrc react-scripts build-redpitaya",
-    "build:redpitaya:staging": "env-cmd -f environments/redpitaya-stagingrc react-scripts build-redpitaya",
+    "build:pluto:prod": "env-cmd -f environments/pluto-prodrc react-scripts build",
+    "build:pluto:staging": "env-cmd -f environments/pluto-stagingrc react-scripts build",
+    "build:redpitaya:prod": "env-cmd -f environments/redpitaya-prodrc react-scripts build",
+    "build:redpitaya:staging": "env-cmd -f environments/redpitaya-stagingrc react-scripts build",
     "build": "env-cmd -f environments/devrc react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
